Addid utils, finished main class methods

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -9,7 +9,10 @@ dependencies:
   - pytest
   - pytest-cov
   - codecov
-
+  - scikit-learn
+  - joblib
+  - numpy
+  - networkx
     # Pip-only installs
   #- pip:
   #  - codecov
